--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-changed": "^3.1.0",
+    "gulp-concat": "^2.6.1",
     "gulp-environments": "^0.1.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-jshint": "^2.0.4",
